--- a/src/TryItNow/MobileApp/XamarinCRM/XamarinCRM.csproj
+++ b/src/TryItNow/MobileApp/XamarinCRM/XamarinCRM.csproj
@@ -217,6 +217,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Readme.html" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pages\Customers\" />
